src/ifcapi/include/ifcapi/ifcapi.h

typedef struct ifcopenshell_ifc_instance_t ifcopenshell_ifc_instance_t;
/* ------------------------------------------------------------------ */
/*  High-level: placement utilities                                    */
/* ------------------------------------------------------------------ */
/*                                                                     */
/*  All matrices are 4x4, row-major, passed as double[16]. Row-major   */
/*  layout means m[i][j] == out[i*4 + j]. The translation is in the    */
/*  last column (out[3], out[7], out[11]).                             */

/// Build a 4x4 placement matrix from origin O, Z axis, and X axis vectors.
IFCAPI_EXPORT void ifcopenshell_placement_a2p(
    const double o[3], const double z[3], const double x[3], double out[16]);
/// Parse an IfcAxis2Placement (3D, 2D, 1D) into a 4x4 matrix.
/// Returns false if the entity is not an axis placement or uses an
/// unsupported form (e.g. IfcAxis2PlacementLinear without coordinates).
IFCAPI_EXPORT bool ifcopenshell_placement_get_axis2placement(const ifcopenshell_ifc_instance_t* instance, double out[16]);
/// Parse an IfcLocalPlacement into a 4x4 matrix, recursing through
/// PlacementRelTo. Passing id=0 returns identity with true.
IFCAPI_EXPORT bool ifcopenshell_placement_get_local_placement(const ifcopenshell_ifc_instance_t* instance, double out[16]);
/// Parse an IfcCartesianTransformationOperator3D(nonUniform) into a 4x4 matrix.
IFCAPI_EXPORT bool ifcopenshell_placement_get_cartesian_xform_3d(const ifcopenshell_ifc_instance_t* instance, double out[16]);
/// Parse an IfcMappedItem's placement (source mapping origin composed with target op).
IFCAPI_EXPORT bool ifcopenshell_placement_get_mappeditem_xform(const ifcopenshell_ifc_instance_t* instance, double out[16]);
/// Get the Z elevation of an IfcBuildingStorey (from placement, or Elevation attr).
IFCAPI_EXPORT bool ifcopenshell_placement_get_storey_elevation(const ifcopenshell_ifc_instance_t* instance, double* out);
/// Build a 4x4 rotation matrix around one principal axis ('X', 'Y', or 'Z').
IFCAPI_EXPORT void ifcopenshell_placement_rotation(
    double angle_rad, char axis, double out[16]);